use Boolean.valueOf instead of new Boolean to avoid object creation